# novessa

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  PYTHONANYWHERE_DEPLOYMENT.md  QUICK_START_DEPLOY.md  README.md  RENDER_DEPLOYMENT.md  package-lock.json  package.json  pythonanywhere_wsgi.py  render.yaml  verify_pythonanywhere_deployment.py  verify_render_deployment.py
apps/api/: .env.example  .env.pythonanywhere.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/apps/: __init__.py
apps/api/apps/audit/: __init__.py  admin.py  models.py
apps/api/apps/audit/migrations/: 0001_initial.py
apps/api/apps/content/: __init__.py  admin.py  defaults.py  models.py  urls.py  views.py
apps/api/apps/content/migrations/: 0001_initial.py
apps/api/apps/core/: admin_bootstrap.py  apps.py  middleware.py  signals.py  urls.py
apps/api/apps/donations/: __init__.py  admin.py  models.py  services.py  urls.py  views.py
apps/api/apps/forms/: __init__.py  admin.py  models.py  urls.py  views.py
apps/api/apps/mailer/: __init__.py  admin.py  models.py  services.py  urls.py  views.py
apps/api/config/: __init__.py  urls.py
apps/api/config/settings/: base.py  development.py  production.py  test.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_admin_bootstrap.py  test_admin_crud.py  test_content_api.py  test_donation_webhook.py  test_form_endpoints.py
apps/api/tests/smoke/: send_email_templates.py  test_health.py
apps/api/tests/unit/: test_email_service.py  test_mailgun_signature.py
apps/web/: .env.example  (+3 more)
(+44 files in other folders)
